One more round of findbugs fixes